syntax = "proto3";

package ru.otus.service;

option java_multiple_files = true;

message RemoteNumberRequest {
  int64 firstValue = 1;
  int64 lastValue = 2;
}

message RemoteNumberResponse {
  int64 number = 1;
}

service RemoteNumberService  {
  rpc runNums(RemoteNumberRequest) returns (stream RemoteNumberResponse) {};
}